<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="80dp"
    tools:context=".ui.home.HomeFragment">
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible" />
    <TextView
        android:id="@+id/tv_no_internet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_internet"
        android:textSize="50sp"
        android:gravity="center"/>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <TextView
                android:id="@+id/text_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_heading"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="40sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/text_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_heading"
                android:layout_marginTop="36dp"
                android:text="@string/home_upcoming"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <View
                android:id="@+id/line1"
                android:layout_below="@id/text_upcoming"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="5dp"
                android:background="#FF000000" />
            <TextView
                android:id="@+id/text_null_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_upcoming"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:text="@string/null_event"
                android:textSize="20sp"
                android:textStyle="italic"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_upcoming"
                android:visibility="visible"
                android:layout_below="@id/line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/text_finished"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_upcoming"
                android:layout_marginTop="40dp"
                android:text="@string/home_finished"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <View
                android:id="@+id/line2"
                android:layout_below="@id/text_finished"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="5dp"
                android:background="#FF000000" />
            <TextView
                android:id="@+id/text_null_finished"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_finished"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:text="@string/null_event"
                android:textSize="20sp"
                android:textStyle="italic"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_finished"
                android:layout_below="@id/line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/text_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_finished"
                android:layout_marginTop="40dp"
                android:text="@string/home_all"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <View
                android:id="@+id/line3"
                android:layout_below="@id/text_all"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="5dp"
                android:background="#FF000000" />
            <TextView
                android:id="@+id/text_null_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_all"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:text="@string/null_event"
                android:textSize="20sp"
                android:textStyle="italic"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_all"
                android:layout_below="@id/line3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>