<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_banner">
            <ImageView
                android:id="@+id/iv_banner"
                android:contentDescription="@string/alt_banner"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_1"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingBottom="50dp">

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/home_upcoming"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/text_owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_title"
                    android:layout_marginTop="10dp"
                    android:text="@string/home_upcoming"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <ImageView
                    android:id="@+id/iv_time"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_below="@id/text_owner"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/event_time"
                    android:src="@drawable/ic_time_24dp"/>
                <TextView
                    android:id="@+id/text_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_owner"
                    android:layout_toEndOf="@id/iv_time"
                    android:layout_alignTop="@id/iv_time"
                    android:layout_alignBottom="@id/iv_time"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/home_upcoming"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <ImageView
                    android:id="@+id/iv_registrant"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_below="@id/iv_time"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/event_time"
                    android:src="@drawable/ic_registrant_24dp"/>
                <TextView
                    android:id="@+id/text_quota"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/iv_registrant"
                    android:layout_alignTop="@id/iv_registrant"
                    android:layout_alignBottom="@id/iv_registrant"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/home_upcoming"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/text_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_registrant"
                    android:layout_marginTop="30dp"
                    android:text="@string/home_upcoming"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:text="@string/daftar"
        android:textAllCaps="true"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>